Add JVM arg to allow SecurityManager usage in Java 21